# predictive-traffic-modeling

./: .env.example  .gitignore  Makefile  README.md  google_directions.py  google_places.py  google_route_scoring.py  pyproject.toml  pytest.ini  requirements.txt  routing_engine.py  streamlit_UI.py
app/: streamlit_app.py
data/merged/: cleaned_combined_dataset 3 and 4.csv
data/processed/datasets_cleaned/: dataset1_cleaned.csv
data/raw/: NYC OpenData EZ Pass Reader.csv  NYC Real-Time Traffic Speed Data.csv
docs/: google-multi-route-model-scoring.md
notebooks/: exploratory_data_analysis.ipynb  routing_algorithm.ipynb
notebooks/data_cleaning/: Datasets_1,2,6_Clean (1).ipynb  Datasets_1,2,6_Clean.ipynb  data_cleaning (1).ipynb  data_cleaning (2).ipynb  data_cleaning(EZ Pass and NYC Traffic data).ipynb  dataset3.ipynb  dataset4.ipynb  dataset5.ipynb  dataset6.ipynb  dataset_311_signals.ipynb  dataset_motor_collisions.ipynb
notebooks/data_merging/: Datasets_1,2,6_Merge.ipynb  Merge_Datasets_3_and_4.ipynb  Merged Dataset (EZ Pass and NYC Traffic Speed).csv  data_cleaning_&_Merging(EZ Pass and NYC Traffic Speed).ipynb  data_cleaning_&_Merging.ipynb  merge_aggregated.py  merge_detailed.py  ml_preprocessing.py
notebooks/modeling/: Modeling(DT_and_Linear) (1).ipynb  random-forest-modeling.ipynb
scripts/: ensure_ml_datasets.py
src/traffic_routing/: __init__.py  config.py  encoded_polyline.py  google_directions.py  google_places.py  google_route_scoring.py  routing_engine.py
tests/: test_route_benchmark.py
