[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-routing"
version = "0.1.0"
description = "Compare Google Directions ETAs with a local NYC congestion model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "streamlit-folium",
    "folium",
    "pandas",
    "numpy",
    "networkx",
    "scikit-learn",
    "scipy",
    "requests",
    "polyline",
    "python-dotenv",
    "pytest",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that call live external APIs",
]
